GONRG-9539 JDBC returns "role" for ListGroupApi ListGroupOnBehalfOfApi.